...
        label.accessibilityTraits.insert(.header)
        return label
    }()

    private lazy var textLabel: UILabel = {
        let label = UILabel()
        label.accessibilityIdentifier = "facts.details.text"
        label.font = .preferredFont(forTextStyle: .body)
        label.adjustsFontForContentSizeCategory = true
        label.numberOfLines = 0
        label.textColor = .label
        return label
    }()
...
